Closed Bug 1917356 Opened 1 month ago Closed 22 days ago

High freq bugs/1743533-1.html == bugs/1743533-1-notref.html | single tracking bug

Categories

(Core :: Layout, defect, P5)

defect

Tracking

()

RESOLVED FIXED
132 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- unaffected
firefox130 --- unaffected
firefox131 --- unaffected
firefox132 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: emilio)

References

(Regression)

Details

(Keywords: intermittent-failure, intermittent-testcase, regression, Whiteboard: [stockwell disable-recommended])

Attachments

(1 file)

Emilio, this started to fail frequently since Bug 1917458 landed, as seen here.
Could you please take a look?

Flags: needinfo?(emilio)
Summary: Intermittent bugs/1743533-1.html == bugs/1743533-1-notref.html | single tracking bug → High freq bugs/1743533-1.html == bugs/1743533-1-notref.html | single tracking bug

Sure

Assignee: nobody → emilio
Flags: needinfo?(emilio)

Printing has a weird code-path which doesn't use the refresh driver.
Update frame sizes explicitly, and remove the hack in
nsDisplayRemote::Paint (which is what probably papered over this).

Keywords: regression
Regressed by: 1917458

Set release status flags based on info from the regressing bug 1917458

Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/aabc2f9708a4 Update remote frame sizes for printing reliably. r=mstange
Status: NEW → RESOLVED
Closed: 23 days ago
Resolution: --- → FIXED
Target Milestone: --- → 132 Branch

Is this failure platform-specific? The test passes locally with --retry-until-failure. But I see what might be going on, I think we're not waiting for frames to be resized when calling flushRendering()...

https://treeherder.mozilla.org/jobs?repo=try&revision=4071b760ee113a78b4b8fea4cd10a41bf6e63437

Flags: needinfo?(emilio)

Emilio this doesn't look to be platform-specific.

So just for posterity, since treeherder isn't great at persistence, this was caused by this patch. Comment 8 does fix the actual printing issue, but I forgot about paged mode I believe. Though I wonder why it works locally :)

Flags: needinfo?(emilio)
Flags: needinfo?(emilio)
Status: REOPENED → RESOLVED
Closed: 23 days ago22 days ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: