Bug 1917356 - Update remote frame sizes for printing reliably. r=mstange

Printing has a weird code-path which doesn't use the refresh driver.
Update frame sizes explicitly, and remove the hack in
nsDisplayRemote::Paint (which is what probably papered over this).

Differential Revision: https://phabricator.services.mozilla.com/D222372