dom/base/Document.cpp
@@ -16840,9 +16840,10 @@ static void UpdateEffectsOnBrowsingContext(BrowsingContext* aBc,
       // for example.
       return EffectsInfo::FullyHidden();
     }
-    Maybe<nsRect> visibleRect;
-    gfx::MatrixScales rasterScale;
-    visibleRect = subDocFrame->GetVisibleRect();
+    Maybe<nsRect> visibleRect = subDocFrame->GetVisibleRect();
+    if (subDocFrame->PresContext()->IsPrintingOrPrintPreview()) {
+      visibleRect = Some(subDocFrame->GetDestRect());
+    }
     if (!visibleRect) {
       // If we have no visible rect (e.g., because we are zero-sized) we
       // still want to provide the intersection rect in order to get the
@@ -16850,7 +16851,7 @@ static void UpdateEffectsOnBrowsingContext(BrowsingContext* aBc,
       visibleRect.emplace(*output.mIntersectionRect -
                           output.mTargetRect.TopLeft());
     }
-    rasterScale = subDocFrame->GetRasterScale();
+    gfx::MatrixScales rasterScale = subDocFrame->GetRasterScale();
     ParentLayerToScreenScale2D transformToAncestorScale =
         ParentLayerToParentLayerScale(
             subDocFrame->PresShell()->GetCumulativeResolution()) *
