layout/printing/nsPrintJob.cpp
@@ -742,8 +742,8 @@ nsresult nsPrintJob::ReconstructAndReflow() {
       return NS_ERROR_FAILURE;
     }
 
-    nsresult rv = UpdateSelectionAndShrinkPrintObject(po, documentIsTopLevel);
-    NS_ENSURE_SUCCESS(rv, rv);
+    po->mDocument->UpdateRemoteFrameEffects();
+    MOZ_TRY(UpdateSelectionAndShrinkPrintObject(po, documentIsTopLevel));
   }
   return NS_OK;
 }
@@ -1421,6 +1421,7 @@ nsresult nsPrintJob::ReflowPrintObject(const UniquePtr<nsPrintObject>& aPO) {
   }
   // Process the reflow event Initialize posted
   presShell->FlushPendingNotifications(FlushType::Layout);
+  aPO->mDocument->UpdateRemoteFrameEffects();
 
   MOZ_TRY(UpdateSelectionAndShrinkPrintObject(aPO.get(), documentIsTopLevel));
 
